--- a/example/example.rc
+++ b/example/example.rc
@@ -44,7 +44,7 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "CompanyName",      "wangwenx190"
-            VALUE "FileDescription",  "FastBlur demo application."
+            VALUE "FileDescription",  "Qt5Compat GraphicalEffects demo application."
             VALUE "FileVersion",      "1.0.0.0"
             VALUE "LegalCopyright",   "MIT License"
             #ifdef _DEBUG
